fix gap between elements on grids

--- a/_scss/_collection-styles.scss
+++ b/_scss/_collection-styles.scss
@@ -90,6 +90,7 @@
     .project-container{
         width: 70%;
         grid-template-columns: 33% 63%;
+        gap: 10px;
 
         .project-image {
             width: 100%;
